Update base-test.html to not use compiled JavaScript.  This makes it more useful for manual testing during development.

--- a/examples/base-test/base-test.html
+++ b/examples/base-test/base-test.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <script src="../../libs/closure-library/closure/goog/base.js"></script>
-        <script src="base-test-compiled.js"></script>
+        <script src="../../src/deps.js"></script>
+        <script src="base-test.js"></script>
     </head>
     <body>
         <script>
